reproducible conda environment

--- a/environment.yml
+++ b/environment.yml
@@ -3,22 +3,132 @@ channels:
 - conda-forge
 - defaults
 dependencies:
-- git
-- python
-- numpy
-- scipy
-- pandas
-- matplotlib
-- seaborn
-- scikit-learn
-- networkx=1.11
-- tweepy=3.5.0
-- requests
-- tqdm
-- statsmodels
-- librosa=0.5.1
-- ffmpeg
-- ipython
-- jupyter
-- jupyterlab_launcher=0.5.0
-- pygsp==0.5.1
+- asn1crypto=0.22.0=py36_0
+- audioread=2.1.4=py36_2
+- backports=1.0=py36_1
+- backports.functools_lru_cache=1.4=py36_1
+- blas=1.1=openblas
+- bleach=2.0.0=py_1
+- blinker=1.4=py_0
+- bzip2=1.0.6=1
+- ca-certificates=2017.11.5=0
+- certifi=2017.11.5=py36_0
+- cffi=1.11.2=py36_0
+- chardet=3.0.4=py36_0
+- cryptography=2.1.4=py36_0
+- curl=7.55.1=0
+- cycler=0.10.0=py36_0
+- dbus=1.10.22=0
+- decorator=4.1.2=py36_0
+- entrypoints=0.2.3=py36_1
+- expat=2.2.5=0
+- ffmpeg=2.8.6=5
+- fontconfig=2.12.6=0
+- freetype=2.8.1=0
+- gettext=0.19.7=1
+- git=2.14.2=3
+- glib=2.55.0=0
+- gmp=6.1.2=0
+- gst-plugins-base=1.8.0=0
+- gstreamer=1.8.0=1
+- html5lib=1.0.1=py_0
+- icu=58.2=0
+- idna=2.6=py36_1
+- ipykernel=4.8.0=py36_0
+- ipython=6.2.1=py36_1
+- ipython_genutils=0.2.0=py36_0
+- ipywidgets=7.1.1=py36_0
+- jedi=0.11.1=py36_0
+- jinja2=2.10=py36_0
+- joblib=0.11=py36_0
+- jpeg=9b=2
+- jsonschema=2.6.0=py36_1
+- jupyter=1.0.0=py36_0
+- jupyter_client=5.2.2=py36_0
+- jupyter_console=5.2.0=py36_0
+- jupyter_core=4.4.0=py_0
+- jupyterlab=0.27.0=py36_2
+- jupyterlab_launcher=0.5.0=py36_0
+- krb5=1.14.2=0
+- libffi=3.2.1=3
+- libiconv=1.15=0
+- libpng=1.6.34=0
+- librosa=0.5.1=py36_1
+- libsodium=1.0.15=1
+- libssh2=1.8.0=2
+- libxcb=1.12=1
+- libxml2=2.9.7=0
+- llvmlite=0.21.0=py36_0
+- markupsafe=1.0=py36_0
+- matplotlib=2.1.2=py36_0
+- mistune=0.8.3=py_0
+- nbconvert=5.3.1=py_1
+- nbformat=4.4.0=py36_0
+- ncurses=5.9=10
+- networkx=1.11=py36_0
+- notebook=5.4.0=py36_0
+- numpy=1.14.0=py36_blas_openblas_200
+- oauthlib=2.0.6=py_0
+- openblas=0.2.20=7
+- openssl=1.0.2n=0
+- pandas=0.22.0=py36_0
+- pandoc=2.1.1=0
+- pandocfilters=1.4.1=py36_0
+- parso=0.1.1=py_0
+- patsy=0.5.0=py36_0
+- pcre=8.39=0
+- pexpect=4.3.1=py36_0
+- pickleshare=0.7.4=py36_0
+- pip=9.0.1=py36_1
+- prompt_toolkit=1.0.15=py36_0
+- ptyprocess=0.5.2=py36_0
+- pycparser=2.18=py36_0
+- pygments=2.2.0=py36_0
+- pygsp=0.5.1=py_0
+- pyjwt=1.5.3=py_0
+- pyopenssl=17.4.0=py36_0
+- pyparsing=2.2.0=py36_0
+- pyqt=5.6.0=py36_4
+- pysocks=1.6.8=py36_1
+- python=3.6.4=0
+- python-dateutil=2.6.1=py36_0
+- pytz=2017.3=py_2
+- pyzmq=16.0.2=py36_3
+- qt=5.6.2=7
+- qtconsole=4.3.1=py36_0
+- readline=7.0=0
+- requests=2.18.4=py36_1
+- requests-oauthlib=0.8.0=py36_1
+- resampy=0.2.0=py36_1
+- scikit-learn=0.19.1=py36_blas_openblas_201
+- scipy=1.0.0=py36_blas_openblas_201
+- seaborn=0.8.1=py36_0
+- send2trash=1.4.2=py_0
+- setuptools=38.4.0=py36_0
+- simplegeneric=0.8.1=py36_0
+- sip=4.18=py36_1
+- six=1.11.0=py36_1
+- sqlite=3.20.1=2
+- statsmodels=0.8.0=py36_0
+- terminado=0.8.1=py36_0
+- testpath=0.3.1=py36_0
+- tk=8.6.7=0
+- tornado=4.5.3=py36_0
+- tqdm=4.19.5=py_0
+- traitlets=4.3.2=py36_0
+- tweepy=3.5.0=py36_0
+- urllib3=1.22=py36_0
+- wcwidth=0.1.7=py36_0
+- webencodings=0.5=py36_0
+- wheel=0.30.0=py36_2
+- widgetsnbextension=3.1.3=py36_0
+- x264=20131217=3
+- xorg-libxau=1.0.8=3
+- xorg-libxdmcp=1.1.2=3
+- xz=5.2.3=0
+- zeromq=4.2.1=1
+- zlib=1.2.11=0
+- libgcc-ng=7.2.0=h7cc24e2_2
+- libgfortran=3.0.0=1
+- libstdcxx-ng=7.2.0=h7a57d05_2
+- numba=0.36.2=np114py36hc6662d5_0
